<resources>
    <string name="app_name">Uphar FineVest</string>
    <string name="oops">Oops.</string>
    <string name="no_conn">We encounterd an enexpected problem</string>
    <string name="check_conn">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Customer_infotmation">Case Login</string>
    <string name="gurantator_information">Gurantator Information</string>
    <string name="submission">Submission</string>
    <string name="credit_clerance">Credit Clerance</string>
    <string name="pic_load">Pic load</string>
    <string name="sanctiones">Sanctiones</string>
    <string name="comunication">Comunication</string>
    <string name="vrification">Verfication</string>
    <string name="emi">EMI</string>
    <string name="pdc">PDC</string>
    <string name="vehical_details">Vehical Details</string>
    <string name="case_date"> Case Date</string>
    <string name="total_cost">Total Cost</string>
    <string name="total_emi">Total EMI</string>
    <string name="due_date">Due Date</string>
    <string name="cheque_no">Cheque No.</string>
    <string name="installment_amount">Installment Amount</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="item_type">Item Type</string>
    <string name="item_identify">Item Identity</string>
    <string name="intem_make">Item Make</string>
    <string name="bill_no">Bill Invoice No</string>
    <string name="bill_date">Bill Date</string>
    <string name="policy_name">Policy No</string>
    <string name="dealer_name">Dealer Name</string>
    <string name="dsa">DSA</string>
    <string name="policy_start_date">Policy Start Date</string>
    <string name="policy_end_date">Policy End Date</string>
    <string name="insure_name">Insure Name</string>
    <string-array name="gender">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Miss</item>
    </string-array>
    <string name="address_type">Customer Address Type</string>
    <string name="customer_mame">Customer Name</string>
    <string name="father_name">Customer Father Name</string>
    <string name="dob">Customer Date of Birth</string>
    <string name="contact_no">Customer Contact No</string>
    <string name="addhar_no">Customer Adhaar No</string>
    <string name="loan_amount">Customer Laon Amount</string>
    <string name="loan_duration">Customer Laon Duration</string>
    <string name="gurntre">Gurantor</string>
    <string name="addres">Customer Address</string>
    <string name="city">Customer City</string>
    <string name="state">Customer State</string>
    <string name="next_payment_mode">Customer Next Payment Date</string>
    <string name="period_balance">Customer Period balance</string>
    <string name="pin_code">Customer Pin Code</string>
    <string name="pay_mode">Customer Payment Mode (Cash/Card)</string>
    <string name="cityy">Customer City</string>
    <string name="guarantor_mame">Guarantor Name</string>
    <string name="guarantor_father_name">Guarantor Father Name</string>
    <string name="guarantor_dob">Guarantor Date of Birth</string>
    <string name="guarantor_contact_no">Guarantor Contact No</string>
    <string name="guarantor_addhar_no">Guarantor Adhaar No</string>
    <string name="guarantor_addres">Guarantor Address</string>
    <string name="guarantor_state">Guarantor State</string>
    <string name="guarantor_next_payment_mode">Guarantor Next Payment Date</string>
    <string name="guarantor_period_balance">Guarantor Period balance</string>
    <string name="guarantor_pin_code">Guarantor Pin Code</string>
    <string name="guarantor_pay_mode">Guarantor Payment Mode (Cash/Card)</string>
    <string name="guarantor_city">Guarantor City</string>
    <string name="guarantor_address_type">Guarantor Address Type</string>
    <string name="guarantor_district">Guarantor District</string>
    <string-array name="vehical_type">
        <item>2 Wheeler</item>
        <item>3 Wheeler</item>
    </string-array>
    <string name="table">Table No.</string>
    <string name="invoice">Bill Number</string>
    <string name="cashier">Cashier Name</string>
    <string name="status">Payment Status</string>
    <string name="fsv.transition.search.layout">fsv_transition_search_layout</string>
    <string name="search_product">Search Product</string>
    <string name="add_product">Add Product</string>
    <string name="date">Date</string>
    <string name="invoice_num">Invoice No:-</string>
    <string name="inv_num">Inv No-</string>
    <string name="rupees">\u20B9</string>
    <string name="inv_no">Inv No.</string>
    <string name="total_amt">Total Amt.</string>
    <string name="product_name">Product Name</string>
    <string name="share_invoice">Share Inv.</string>
    <string name="product_id">Product Id</string>
    <string name="qty">Qty</string>
    <string name="tax_percent">Tax(%)</string>
    <string name="amt">Amt.</string>
    <string name="amount">Amount</string>
    <string name="disc">Disc.</string>
    <string name="taxable_amount">Taxable Amount :-</string>
    <string name="total_tax">Total Tax :-</string>
    <string name="cgst">CGST:-</string>
    <string name="sgst">SGST:-</string>
    <string name="total_tax_amnt">Total Tax</string>
    <string name="total_amount">Total Amount</string>
    <string name="proceeds">Proceed</string>
    <string name="search_here">Search product here</string>
    <string name="search_invoice">Search Invoice here</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="wallet">Wallet</string>
    <string name="cheque">Cheque</string>
    <string name="credit_sales">Credit Sales</string>
    <string name="multi_mode">Multi Mode Payments</string>
    <string name="reprint">Re-Print</string>
    <string name="split">Split</string>
    <string name="read">Read Only</string>
    <string name="both">Read and Write Both</string>
    <string name="discount">Discount</string>
    <string name="loyalty">Loyalty</string>
    <string name="crm">CRM</string>
    <string name="rescan">Scan</string>
    <string name="table_no">Enter Table no</string>
    <string name="toast_1">Transaction print,use the AIDL mode!</string>
    <string name="toast_2">The service has been disconnected!</string>
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="toast_7"> Only a single Qr code is printed for the AIDL mode</string>
    <string name="toast_8">Now QrCode size must be less than 7!</string>
    <string name="reports">Reports</string>
    <string name="payments">Payment</string>
    <string name="end_of_day">End of Day</string>
    <string name="day_end_report">Day end report</string>
    <string name="item_wise_report">Item wise report</string>
    <string name="select_date">Select date</string>
    <string name="sales">Sales</string>
    <string name="rate_per_item">Rate/item</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="hsn">HSN</string>
    <string name="discnt">Discnt</string>
    <string name="tax">Tax</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="total_product_value">Total Product Value:</string>
    <string name="discnt_on_total">Discount on Total:</string>
    <string name="total_tax_">Total Tax:</string>
    <string name="rounding">Rounding:</string>
    <string name="total_sales">Total Sales:</string>
    <string name="sales_tax_summary">Sales Tax Summary</string>
    <string name="cgst_">CGST On Sub Total:</string>
    <string name="sgst_">SGST On Sub Total:</string>
    <string name="payment_collection">Payment Collection</string>
    <string name="cash_">Cash:</string>
    <string name="payment_recieved">Total Payment Received:</string>
    <string name="name">Name</string>
    <string name="under">Under</string>
    <string name="order_complete">Order Complete</string>
    <string name="amount_">Amount   :</string>
    <string name="tax_amnt">Tax Amt. :</string>
    <string name="mobikwik">Mobikwik Wallet</string>
    <string name="phone_pay">PhonePe Wallet</string>
    <string name="Oxigen_pay">Oxigen  Wallet</string>
    <string name="paytm_wallet">Paytm Wallet</string>
    <string name="payworld">Payworld Wallet</string>
    <string name="accounting">Accounting</string>
    <string name="master">Masters</string>
    <string name="account_master">Account Masters</string>
    <string name="vouchers">Vouchers</string>
    <string name="receipts">Receipt</string>
    <string name="journal">Journal</string>
    <string name="contra">Contra</string>
    <string name="reports_">Reports</string>
    <string name="purchase">Purchase</string>
    <string name="day_book">DayBook</string>
    <string name="ledger">Ledger</string>
    <string name="cash_bank">Cash/Bank Book</string>
    <string name="group_summary">Group Summary</string>
    <string name="register">Register</string>
    <string name="list_account">List of Account</string>
    <string name="address_book">Address Book</string>
    <string name="trial_balance">Trial balance</string>
    <string name="final_report">Final Report</string>
    <string name="balance">Balance</string>
    <string name="tin_gst">TIN/GST No</string>
    <string name="under_group">Under Group</string>
    <string name="type_">Type</string>
    <string name="transaction">Transactions</string>
    <string name="dates">Date</string>
    <string name="type">Type</string>
    <string name="total">Total</string>
    <string name="money_in">Money In</string>
    <string name="money_out">Money Out</string>
    <string name="total_cash_in_amnt">Total Cash-in Amount:</string>
    <string name="total_cash_out_amnt">Total Cash-out Amount:</string>
    <string name="set_date">Set Date</string>
    <string name="default_money">\u20B90</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="email_address">Email Address</string>
    <string name="opening_stock_date">Opening Stock Date</string>
    <string name="opening_stock">Opening Stock</string>
    <string name="closing_stock_date">Closing Stock Date</string>
    <string name="closing_stock">Closing Stock</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="export_to_excel">Export to Excel</string>
    <string name="save">Save</string>
    <string name="show_stock">Show Stock</string>
    <string name="party_cash">Party/Cash</string>
    <string name="purchase_ac">Purchase A/c</string>
    <string name="sales_ac">Sales A/c</string>
    <string name="tax_1_name">Tax 1 Name</string>
    <string name="tax_2_name">Tax 2 Name</string>
    <string name="less_1_name">Less 1 Name</string>
    <string name="less_2_name">Less 2 Name</string>
    <string name="grand_total">Grand Total</string>
    <string name="voucher_type">Vouch. Type</string>
    <string name="voucher_number">Vouch. No.</string>
    <string name="debit">Debit</string>
    <string name="crdt">Credit</string>
    <string name="cr">Cr</string>
    <string name="db">Db</string>
    <string name="runn_balance">Running Balance</string>
    <string name="user_name">User Name </string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="login">User Login</string>
</resources>