<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Customer_infotmation"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Customer_infotmation" />
        <item
            android:id="@+id/nav_verification"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/vrification" />
        <item
            android:id="@+id/nav_emi"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/emi" />
        <item
            android:id="@+id/nav_pdc"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/pdc" />
        <item
            android:id="@+id/nav_vehical"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/vehical_details" />
        <item
            android:id="@+id/nav_pic_load"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/pic_load" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_share"
                android:title="Contact Us" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="LogOut" />
        </menu>
    </item>


</menu>
