<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="15">


        <ImageView
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_131sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_45sdp"
            android:src="@drawable/ic_logo1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_55sdp"
                android:background="@android:drawable/editbox_background_normal"
                android:cursorVisible="false"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/user_name"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20dp"
                android:textStyle="normal"></EditText>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@android:drawable/editbox_background_normal"
                android:cursorVisible="false"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20dp"
                android:textStyle="normal"></EditText>


            <Button
                android:id="@+id/userlogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:background="@drawable/round_blue"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textStyle="normal"></Button>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>