<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/_2sdp"
                android:gravity="left"
                android:hint="@string/case_date"
                android:textColor="@color/black"
                android:textColorHint="@color/jbtn_color"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/case_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@android:drawable/editbox_background_normal"
                android:clickable="true"
                android:contextClickable="true"
                android:cursorVisible="true"
                android:drawablePadding="10dp"
                android:editable="false"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textStyle="normal"></EditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/_2sdp"
                android:gravity="left"
                android:hint="@string/total_cost"
                android:textColor="@color/black"
                android:textColorHint="@color/jbtn_color"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/total_cost"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@android:drawable/editbox_background_normal"
                android:cursorVisible="true"
                android:drawablePadding="10dp"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textStyle="normal"></EditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/_2sdp"
                android:gravity="left"
                android:hint="@string/total_emi"
                android:textColor="@color/black"
                android:textColorHint="@color/jbtn_color"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/total_emi"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@android:drawable/editbox_background_normal"
                android:cursorVisible="true"
                android:drawablePadding="10dp"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textStyle="normal"></EditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center|top"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/_2sdp"
                android:gravity="left"
                android:hint="@string/installment_amount"
                android:textColor="@color/black"
                android:textColorHint="@color/jbtn_color"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/installment_amount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@android:drawable/editbox_background_normal"
                android:cursorVisible="true"
                android:drawablePadding="10dp"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textStyle="normal"></EditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/_2sdp"
                android:gravity="left"
                android:hint="@string/due_date"
                android:textColor="@color/black"
                android:textColorHint="@color/jbtn_color"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/due_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@android:drawable/editbox_background_normal"
                android:clickable="true"
                android:contextClickable="true"
                android:drawablePadding="10dp"
                android:editable="false"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textStyle="normal"></EditText>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/_2sdp"
                android:gravity="left"
                android:hint="@string/payment_mode"
                android:textColor="@color/black"
                android:textColorHint="@color/jbtn_color"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/pay_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_background_normal"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="150">


                <RadioButton
                    android:id="@+id/Cash"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="75"
                    android:text="Cash"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/Cheque"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="75"
                    android:gravity="center|left"
                    android:text="Cheque"
                    android:textSize="18sp" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/cheque_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/_2sdp"
                android:gravity="left"
                android:hint="@string/cheque_no"
                android:textColor="@color/black"
                android:textColorHint="@color/jbtn_color"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cheque_no"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@android:drawable/editbox_background_normal"
                android:clickable="true"
                android:contextClickable="true"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textStyle="normal"></EditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="vertical">

            <Button
                android:id="@+id/emi_genreate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/round_blue"
                android:gravity="center"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textStyle="normal"></Button>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>




